# ufofmt

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: beta-unittests.yml  fmt.yml  lints.yml  stable-unittests.yml
src/: main.rs
src/lib/: errors.rs  formatters.rs  io.rs  mod.rs  utils.rs  validators.rs
testdata/expected/: A_.singlequote.glif
testdata/expected/MutatorSansBoldCondensed-default.ufo/: fontinfo.plist  lib.plist
testdata/expected/MutatorSansBoldCondensed-default.ufo/glyphs/: S_.closed.glif  layerinfo.plist
testdata/expected/MutatorSansBoldCondensed-default.ufo/glyphs.background/: layerinfo.plist
