[package]
name = "ufofmt"
version = "0.1.2"
edition = "2018"
authors     = ["Chris Simpkins <chris@sourcefoundry.org>"]
description = "A highly opinionated UFO source file formatter based on the Norad library"
keywords    = ["fonts", "ufo", "formatter", "normalizer"]
license     = "Apache-2.0"
readme      = "README.md"
repository  = "https://github.com/source-foundry/ufofmt"
categories = ["graphics", "text-processing"]


[dependencies]
norad = "0.4"
structopt = "0.3"
colored = "2.0"
rayon = "1.5"