[package]
name = "ufofmt"
version = "0.7.2-dev.0"
edition = "2018"
authors     = ["Chris Simpkins <chris@sourcefoundry.org>", "Nikolaus Waxweiler <madigens@gmail.com>", "Colin Rofls <colin@cmyr.net>"]
description = "A fast, flexible UFO source file formatter based on the Norad library"
keywords    = ["fonts", "ufo", "formatter", "normalizer"]
license     = "Apache-2.0"
readme      = "README.md"
repository  = "https://github.com/source-foundry/ufofmt"
homepage  = "https://github.com/source-foundry/ufofmt"
categories = ["graphics", "text-processing"]

exclude = [
    "/testdata/*"
]

[dependencies]
norad = { version = "0.6.0", features = ["rayon"] }
structopt = "0.3"
colored = "2.0"
rayon = "1.5"
lazy_static = "1.4"

[dev-dependencies]
fs_extra = "1.2.0"
tempdir = "0.3.7"
pretty_assertions = "1.1.0"